port: JVM argument validation (wave 87)